--- a/index.html
+++ b/index.html
@@ -6,25 +6,34 @@
 -->
 <html>
 	<head>
-		<title>Brainarts - Think. Build. Evolve.</title>
+		<title>Brainarts</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Google Fonts: Montserrat -->
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+		<style>
+			/* Brainarts başlığı için font ve logo stilleri */
+			h1 {
+				font-family: 'Montserrat', sans-serif;
+				font-weight: 700;
+			}
+			.logo {
+				display: block;
+				margin: 0 auto 20px auto;
+				max-width: 150px; /* Logonun boyutunu ayarlayabilirsin */
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
+				<!-- Firma logosu -->
+				<img src="assets/images/logo.png" alt="Brainarts Logo" class="logo" />
 				<h1>Brainarts</h1>
-				<p>Think. Build. Evolve.<br />
-				Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Veri odaklı altyapılar, otomasyon sistemleri ve modern yazılım mimarileri geliştirerek kurumlara sürdürülebilir teknoloji gücü kazandırır.</p>
+				<p>Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Veri odaklı altyapılar, otomasyon sistemleri ve modern yazılım mimarileri geliştirerek kurumlara sürdürülebilir teknoloji gücü kazandırır.</p>
 			</header>
-
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
-			</form>
 
 		<!-- Footer -->
 			<footer id="footer">
@@ -32,7 +41,7 @@
 					<li><a href="https://x.com/BrainArts_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/brhmkrs" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/company/brainarts/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:info@brainarts.com.tr" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>© Brainarts.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
