--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Header -->
 			<header id="header">
 				<!-- Firma logosu -->
-				<img src="assets/images/logo.png" alt="Brainarts Logo" class="logo" />
+				<img src="images/logo.png" alt="Brainarts Logo" class="logo" />
 				<h1>Brainarts</h1>
 				<p>Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Veri odaklı altyapılar, otomasyon sistemleri ve modern yazılım mimarileri geliştirerek kurumlara sürdürülebilir teknoloji gücü kazandırır.</p>
 			</header>
