--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!-- Google Fonts: Montserrat -->
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+		<!-- Google Fonts: Poppins -->
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 		<style>
 			/* Brainarts başlığı için font ve logo stilleri */
 			h1 {
-				font-family: 'Montserrat', sans-serif;
-				font-weight: 700;
+				font-family: 'Poppins', sans-serif;
+				font-weight: 600;
+				font-size: 2.5em; /* Bir tık küçülttük (varsayılan genelde 3em civarındadır) */
+				margin-top: 10px; /* Logoyla arasındaki boşluğu azalttık */
 			}
 			.logo {
 				display: block;
-				margin: 0 auto 20px auto;
-				max-width: 150px; /* Logonun boyutunu ayarlayabilirsin */
+				margin: 0 auto; /* Ortada tutar */
+				margin-top: -20px; /* Logoyu biraz yukarı kaydırır */
+				margin-bottom: 10px; /* Logoyla başlık arasındaki boşluğu azaltır */
+				max-width: 150px; /* Logonun boyutunu koruyoruz */
 			}
 		</style>
 	</head>
@@ -30,9 +34,9 @@
 		<!-- Header -->
 			<header id="header">
 				<!-- Firma logosu -->
-				<img src="images/logo.png" alt="Brainarts Logo" class="logo" />
+				<img src="assets/images/logo.png" alt="Brainarts Logo" class="logo" />
 				<h1>Brainarts</h1>
-				<p>Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Veri odaklı altyapılar, otomasyon sistemleri ve modern yazılım mimarileri geliştirerek kurumlara sürdürülebilir teknoloji gücü kazandırır.</p>
+				<p>Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Modern yazılım mimarileri, otonom ajanlar ve veri odaklı altyapılarla sürdürülebilir teknoloji gücü sunar. Finansal teknolojiler ve akıllı fiyatlama motorlarıyla kurumlara stratejik avantaj sağlar.</p>
 			</header>
 
 		<!-- Footer -->
