--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Header -->
 			<header id="header">
 				<!-- Firma logosu -->
-				<img src="assets/images/logo.png" alt="Brainarts Logo" class="logo" />
+				<img src="images/logo.png" alt="Brainarts Logo" class="logo" />
 				<h1>Brainarts</h1>
 				<p>Brainarts, yapay zeka destekli akıllı çözümlerle işletmelerin dijital dönüşümünü hızlandıran yenilikçi bir yazılım stüdyosudur. Modern yazılım mimarileri, otonom ajanlar ve veri odaklı altyapılarla sürdürülebilir teknoloji gücü sunar. Finansal teknolojiler ve akıllı fiyatlama motorlarıyla kurumlara stratejik avantaj sağlar.</p>
 			</header>
