--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<li><a href="https://x.com/BrainArts_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/brhmkrs" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/company/brainarts/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="mailto:info@brainarts.com.tr" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:brainfo@brainarts.com.tr" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>© Brainarts.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
